force-app/main/default/objects/DelayDefine__mdt/DelayDefine__mdt.object-meta.xml
<CustomObject>
    <description>各課の対応がある期限を過ぎた際、この中のメッセージが対象レコードに表示されます</description>
    <label>各課遅延の定義</label>
</CustomObject>