force-app/main/default/objects/DelayDefine__mdt/fields/FormulaField__c.field-meta.xml
<CustomField>
    <fullName>FormulaField__c</fullName>
    <label>数式項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>