force-app/main/default/objects/DelayDefine__mdt/fields/MessageBody__c.field-meta.xml
<CustomField>
    <fullName>MessageBody__c</fullName>
    <label>メッセージ本文</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>