force-app/main/default/objects/DelayDefine__mdt/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <label>備考</label>
    <length>255</length>
    <type>Text</type>
</CustomField>