force-app/main/default/objects/DelayDefine__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>TransportationMode__c</columns>
    <columns>FormulaField__c</columns>
    <columns>Note__c</columns>
    <columns>MessageBody__c</columns>
    <filterScope>Everything</filterScope>
    <label>処理締切設定</label>
    <language>ja</language>
</ListView>